Project1Fi/css/gallery.css
/*  The top navigation */

nav {
    position: fixed;
    z-index: 10;
    left: 0;
    right: 0;
    top: 0;
    padding: 0 5%;
    height: 70px;
    background: rgb(22, 44, 58);
}

nav .logo {
    float: left;
    padding-bottom: 0rem;
    width: 40%;
    height: 100%;
    display: flex;
    align-items: center;
    font-family: Cinzel;
    text-transform: uppercase;
    font-size: 1.5rem;
    color: white;
}

@media (max-width: 20rem) {
    nav .logo {
        font-size: 1rem;
    }
}

.logoCo {
    text-decoration: none;
    color: white;
}

.logoCo a:hover {
    color: white
}

.logoCo a::before {
    content: '';
    display: block;
    transform: translateY(0%);
    height: 9px;
    background-color: RGB(255, 255, 255, 0);
    top: 0;
    width: 0%;
}

nav .links {
    float: right;
    padding: 0;
    margin: 0;
    width: 60%;
    height: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

nav .links li {
    padding-bottom: 30px;
    list-style: none;
    align-items: center;
}

nav .links a {
    text-decoration: none;
    font-family: Brandon Grotesque;
    text-transform: uppercase;
    display: block;
    padding: 1em;
    font-size: 13px;
    font-weight: bold;
    color: RGB(219, 204, 181);
}

#nav-toggle {
    position: relative;
    top: -100px;
}

nav .icon-burger {
    display: none;
    position: absolute;
    right: 5%;
    top: 50%;
    transform: translateY(-60%);
}

nav .icon-burger .line {
    width: 25px;
    height: 3px;
    background: white;
    margin: 5px;
    border-radius: 3px;
    transition: all .3s ease-in-out;
}

@media screen and (max-width: 700px) {
    nav .logo {
        transform: translateY(-20%);
        float: none;
        width: auto;
        justify-content: center;
    }
    nav .links {
        float: none;
        position: fixed;
        z-index: 9;
        left: 0;
        right: 0;
        top: 70px;
        bottom: 100%;
        background: rgb(39, 39, 39);
        width: auto;
        flex-direction: column;
        justify-content: space-evenly;
        height: auto;
        overflow: hidden;
        transition: all .5s ease-in-out;
    }
    nav .links a {
        font-size: 15px;
    }
    nav .icon-burger {
        display: block;
    }
    nav :checked~.links {
        bottom: 0;
    }
    nav :checked~.icon-burger .line:nth-child(1) {
        transform: translateY(10px) rotate(225deg);
    }
    nav :checked~.icon-burger .line:nth-child(3) {
        transform: translateY(-10px) rotate(-225deg);
    }
    nav :checked~.icon-burger .line:nth-child(2) {
        opacity: 0;
    }
}

nav a:hover {
    color: RGB(181, 104, 76);
}

nav a::before {
    content: '';
    display: block;
    transform: translateY(-100%);
    height: 5px;
    background-color: RGB(181, 104, 76);
    top: 0;
    width: 0%;
    transition: all ease-in-out 250ms;
}

nav a:hover::before {
    width: 100%;
}

.navcontainer {
    width: 100%;
    margin: 0 auto;
}

.homeColor {
    color: rgb(134, 134, 134);
}

.header::after {
    content: '';
    display: table;
    clear: both;
}

/*The top navigation */

/*  [END] NAVIGATION BAR [END]

/* [START] GALLERY [START]
		retrieved from https://www.youtube.com/watch?v=ltxxNidblts&t=595s*/

body {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    background: rgb(219, 204, 181);
}

.intro{
  text-align: center;
  margin: 20px;
  padding: 20px;
}

.intro h1{
      font-family: 'Brandon Grotesque';
      font-size: 60px;
}

.intro p{
  font-family: 'Fauna one';
  font-size: 15px;
}

.container{
	padding-top: 50px;
	width: 80%;
	margin: 70px auto 0;
	margin-bottom: 200px;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
    justify-content: center;
}

.container {
    padding-top: 100px;
    width: 100%;
    /*margin: 70px auto 0;*/
    margin-bottom: 10rem;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.container .box {
    position: relative;
    width: 300px;
    height: 300px;
    margin: 10px;
    display: inline-block;
}

.container .box .imgBox {
    position: relative;
    overflow: hidden;
}

.container .box .imgBox img {
    max-width: 100%;
    transition: transform 2s;
}

.container .box:hover .imgBox img {
    transform: scale(1.2);
}

.container .box .details {
    position: absolute;
    top: 10px;
    left: 10px;
    bottom: 10px;
    right: 10px;
    background: rgba(181, 104, 76, 0.7);
    transform: scaleY(0);
    transition: transform 0.5s;
}

.container .box:hover .details {
    transform: scaleY(1);
}

.container .box .details .content {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    text-align: center;
    padding: 15px;
    color: white;
}

.container .box .details .content h2 {
    font-family: Brandon Grotesque;
    margin: 0;
    padding: 0;
    font-size: 20px;
    color: rgb(22, 44, 58);
}

.container .box .details .content p {
    font-family: fauna one;
    font-size: 11px;
    margin: 10px 0 0;
    padding: 0;
}

/*BUTTON*/

.btn {
    transform: translate(90px, 200px);
    border-radius: 15px;
    padding: 10px 20px;
    font-size: 15px;
    font-family: Fauna One;
    cursor: pointer;
    margin: 10px;
    transition: 0.8s;
    position: relative;
    overflow: hidden;
    background: rgb(219, 204, 181);
    color: rgb(22, 44, 58);
    border: 2px solid rgb(22, 44, 58);
}

.btn::before {
    content: "";
    position: absolute;
    left: 0;
    width: 100%;
    height: 0%;
    background: rgb(22, 44, 58);
    z-index: -1;
    transition: 0.8s;
}

.btn:hover {
    color: RGB(181, 104, 76);
    background: rgb(22, 44, 58);
}

/* [END] GALLERY [END] */

.grid {
    display: grid;
}

@media (max-width: 50rem) {
    .grid.add-gutters {
        /*
        took the help from IAT 235 Notes
        */
        /* adding gutters to the columns */
        grid-column-gap: 1rem;
        grid-row-gap: 1rem;
    }
}

@media (min-width: 900rem) {
    .grid.grid4 {
        /*
    took the help from IAT 235 Notes
    */
        grid-template-columns: 1fr 1fr 1fr 1fr;
        grid-template-rows: auto;
        grid-auto-flow: row;
    }
}

@media (min-width: 900rem) {
    .grid.grid1 {
        /*
      took the help from IAT 235 Notes
      */
        display: inline-block;
        grid-template-columns: 1fr;
        grid-template-rows: 2rem;
        grid-auto-flow: row;
    }
}

